{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 83,
  "lineage": "38ddc273-a8d9-e232-ac9b-0593f6877148",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:438465140342:internet-gateway/igw-0ee9cd2fff0974fc6",
            "id": "igw-0ee9cd2fff0974fc6",
            "owner_id": "438465140342",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-0891001f71eebe93e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:438465140342:route-table/rtb-07bc44e2635245a7f",
            "id": "rtb-07bc44e2635245a7f",
            "owner_id": "438465140342",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0891001f71eebe93e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:438465140342:route-table/rtb-06ef77a6314dd0e69",
            "id": "rtb-06ef77a6314dd0e69",
            "owner_id": "438465140342",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee9cd2fff0974fc6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0891001f71eebe93e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_az1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd81e2a3d7d70965",
            "route_table_id": "rtb-06ef77a6314dd0e69",
            "subnet_id": "subnet-0a82cda0731707d8e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public_subnet_az2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f52f3d188b4ca58b",
            "route_table_id": "rtb-06ef77a6314dd0e69",
            "subnet_id": "subnet-0609bf6572937549a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:438465140342:security-group/sg-0f1106478a69523ff",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0f1106478a69523ff",
            "ingress": [],
            "name": "Allow SSH",
            "name_prefix": "",
            "owner_id": "438465140342",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH-SG"
            },
            "tags_all": {
              "Name": "SSH-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0891001f71eebe93e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "second_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:438465140342:security-group/sg-04f2e48209adb04be",
            "description": "Allow SSH and port 3000 from vpc cidr only",
            "egress": [],
            "id": "sg-04f2e48209adb04be",
            "ingress": [],
            "name": "Allow SSH and port 3000 from vpc cidr only",
            "name_prefix": "",
            "owner_id": "438465140342",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "second-sg"
            },
            "tags_all": {
              "Name": "second-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0891001f71eebe93e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_port_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-1711277327",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04f2e48209adb04be",
            "security_group_rule_id": "sgr-04eb8a6094d997c26",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.second_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-105646062",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f1106478a69523ff",
            "security_group_rule_id": "sgr-073fc85b6c2132b03",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_v2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3516040609",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04f2e48209adb04be",
            "security_group_rule_id": "sgr-0d1f0f5fbc1c7c99c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.second_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:438465140342:subnet/subnet-05b2032a101b7eb95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b2032a101b7eb95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438465140342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_az1"
            },
            "tags_all": {
              "Name": "private_subnet_az1"
            },
            "vpc_id": "vpc-0891001f71eebe93e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private_subnet_az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:438465140342:subnet/subnet-0b144091ea11b1a24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b144091ea11b1a24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438465140342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_az2"
            },
            "tags_all": {
              "Name": "private_subnet_az2"
            },
            "vpc_id": "vpc-0891001f71eebe93e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public_subnet_az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:438465140342:subnet/subnet-0a82cda0731707d8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a82cda0731707d8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438465140342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az1"
            },
            "tags_all": {
              "Name": "public_subnet_az1"
            },
            "vpc_id": "vpc-0891001f71eebe93e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public_subnet_az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:438465140342:subnet/subnet-0609bf6572937549a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0609bf6572937549a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438465140342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az2"
            },
            "tags_all": {
              "Name": "public_subnet_az2"
            },
            "vpc_id": "vpc-0891001f71eebe93e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:438465140342:vpc/vpc-0891001f71eebe93e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c969b4f11521acbd",
            "default_route_table_id": "rtb-0222bc442a39ebd79",
            "default_security_group_id": "sg-02100900a048b9074",
            "dhcp_options_id": "dopt-0b5d659450e79e5d7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0891001f71eebe93e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0222bc442a39ebd79",
            "owner_id": "438465140342",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            }
          }
        }
      ]
    }
  ]
}